--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,29 @@
 @tailwind utilities;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Cinzel:wght@400..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
+
+
+.cinzel {
+    font-family: "Cinzel", serif;
+}
+
+
+.playfair {
+    font-family: "Playfair Display", serif;
+}
+
+.berkshire-swash-regular {
+    font-family: "Berkshire Swash", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lobster-regular {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
