add article api done

--- a/src/Pages/AddArticle/styles.css
+++ b/src/Pages/AddArticle/styles.css
@@ -2,3 +2,7 @@
     padding: 9px 3px;
     /* border: none; */
 }
+/* .file-input::file-selector-button {
+    background-color: black;
+    color: white;
+} */
