--- a/src/Pages/Subscription/Sub.css
+++ b/src/Pages/Subscription/Sub.css
@@ -16,3 +16,28 @@
     color: #ffd700; /* Set gold color */
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.3); 
 }
+
+.Modal {
+    background: white;
+    position: absolute;
+    max-width: 500px;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 10px;
+    outline: none;
+}
+
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
